@@ -1,7 +1,7 @@
 #/*! \page config_macros Default configuration: /usr/lib/rpm/macros
 # \verbatim
 #
-# $Id: macros.in,v 1.85 2001/07/14 20:09:56 jbj Exp $
+# $Id: macros.in,v 1.86 2001/07/28 00:33:07 jbj Exp $
 #
 # This is a global RPM configuration file. All changes made here will
 # be lost when the rpm package is upgraded. Any per-system configuration
@@ -379,17 +379,17 @@
 # XXX Use a CDB database model for concurrent access (under development,
 # cursor teardown with signals needs work, much more besides.)
 #%__dbi_other			usedbenv create joinenv cdb mpool \
-#				mp_mmapsize=8Mb mp_size=512Kb verify usecursors
+#				mp_mmapsize=8Mb mp_size=512Kb verify
 
 # XXX Use transactions and logs for rpmdb durability (no clue yet):
 #%__dbi_other			usedbenv create joinenv mpool txn log \
-#				mp_mmapsize=8Mb mp_size=512Kb verify usecursors
+#				mp_mmapsize=8Mb mp_size=512Kb verify
 
 # XXX enable at your own risk, CDB access to rpmdb isn't cooked yet.
 #%__dbi_cdb			create joinenv cdb mpool
 
 # XXX The "traditional" rpmdb shared/exclusive fcntl(2) lock on Packages model:
-%__dbi_other			verify usecursors %{?__dbi_cdb}
+%__dbi_other			verify %{?_tmppath:tmpdir=%{_tmppath}} %{?__dbi_cdb}
 
 # Note: adding nofsync here speeds up --rebuilddb a lot.
 %__dbi_rebuild			nofsync !log !txn !cdb
